# racingcar-c

./: CMakeLists.txt  README.md  main.c
modules/: arraytools.h  arraytoos.c  car.h  racingGame.c  racingGame.h  random.c  random.h  request.h
modules/application/: racingGame.c  racingGame.h
modules/commons/: arrayTools.h
modules/domain/: car.c  car.h
modules/presentation/: racingCarController.c  racingCarController.h  request.h  response.c  response.h
tests/: CMakeLists.txt
